# cellowm

./: .gitignore  Makefile  Makefile.in  README.md  cello.desktop  compile  config.h  config.h.in  config.status  configure  configure.ac  depcomp  install-sh  makefile  missing  mk.bkp  readme.md
examples/: sxhkdrc
samples/: config.json  sxhkdrc
src/: Makefile  Makefile.am  Makefile.in  cellist.c  cello.c  celloc.c  config.h  confparse.c  cursor.c  desktop.c  events.c  ewmh.c  handlers.c  list.c  main.c  message.c  utils.c  window.c  xcb.c
src/include/: atoms.xmacro  cello.h  confparse.h  cursor.h  desktop.h  events.h  events.xmacro  ewmh.h  handlers.h  list.h  log.h  message.h  tokens.xmacro  types.h  utils.h  window.h  xcb.h
